# nes256

./: .gitignore  Cargo.toml  README.md
src/: common.rs  cpu.rs  joypad.rs  lib.rs  main.rs  memory.rs  opcode.rs  ppu.rs  renderer.rs  system.rs  trace.rs
tests/: nestest.rs
