[package]
name = "nes256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
num = "0.4.3"
pixels = "0.15.0"
winit = "0.30.12"
